# Cpp-PCL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PCL_WS.code-workspace  README.md  VsCodeWS.code-workspace  cloud_filtered.pcd  cloud_test.pcd  convex.ply  log.txt  matlab_script.m  matlab_script.m~  normals_output_ascii.pcd  normals_output_bin.pcd  normals_output_bin_compressed  qvtk_compatibility.h
clouds/: 1631937023010585.pcd  1mCubo.pcd  1mCubo2.txt  1mCubo3.pcd  1mCubo3.txt  1mCuboinho.pcd  caixa.pcd  cropbox.txt  pessoa.pcd  pessoa_trans.pcd  scan2_pp.ply  volume_test.pcd
clouds/G-PCD/: README.md
clouds/G-PCD/stimuli/: bunny.ply  bunny_D01_L01.ply  bunny_D01_L02.ply  bunny_D01_L03.ply  bunny_D01_L04.ply  bunny_D02_L01.ply  bunny_D02_L02.ply  bunny_D02_L03.ply  bunny_D02_L04.ply  cube_D01_L01.ply  cube_D01_L02.ply  cube_D01_L03.ply  cube_D01_L04.ply  cube_D02_L01.ply  cube_D02_L02.ply  cube_D02_L03.ply  cube_D02_L04.ply  dragon_D01_L01.ply  dragon_D01_L02.ply  dragon_D01_L03.ply  dragon_D01_L04.ply  dragon_D02_L01.ply  dragon_D02_L02.ply  dragon_D02_L03.ply  dragon_D02_L04.ply  sphere_D01_L01.ply  sphere_D01_L02.ply  sphere_D01_L03.ply  sphere_D01_L04.ply  sphere_D02_L01.ply  sphere_D02_L02.ply  sphere_D02_L03.ply  sphere_D02_L04.ply  vase_D01_L01.ply  vase_D01_L02.ply  vase_D01_L03.ply  vase_D01_L04.ply  vase_D02_L01.ply  vase_D02_L02.ply  vase_D02_L03.ply  (+1 more)
clouds/G-PCD/subjective scores/desktop setup/: subj_desktop_acr.csv  subj_desktop_dsis.csv
clouds/G-PCD/subjective scores/hmd ar setup/: subj_hmd_dsis.csv
clouds/faces/: cloud_0.pcd  cloud_1.pcd  cloud_2.pcd  cloud_3.pcd  cloud_4.pcd
clouds/livox/: corner.pcd  guess.txt  scan1.pcd  scan10.pcd  scan100.pcd  scan101.pcd  scan11.pcd  scan12.pcd  scan13.pcd  scan14.pcd  scan15.pcd  scan16.pcd  scan17.pcd  scan18.pcd  scan19.pcd  scan2.pcd  scan20.pcd  scan21.pcd  scan22.pcd  scan23.pcd  scan24.pcd  scan25.pcd  scan26.pcd  scan27.pcd  scan28.pcd  scan29.pcd  scan3.pcd  scan30.pcd  scan31.pcd  scan32.pcd  scan33.pcd  scan34.pcd  scan35.pcd  scan36.pcd  scan37.pcd  scan38.pcd  scan39.pcd  scan4.pcd  scan40.pcd  scan41.pcd  (+64 more)
clouds/scanmatch/: c10.pcd  c11.pcd  c13.pcd  c15.pcd  c17.pcd  c19.pcd  c21.pcd  c22.pcd  c23.pcd  c25.pcd  c26.pcd  c3.pcd  c4.pcd  c8.pcd  cloudtofile_map_1603303089.pcd  cloudtofile_scan_1603303101.pcd  log.txt
clouds/scanmatch/2d/: c1.pcd  c12.pcd  c14.pcd  c16.pcd  c18.pcd  c2.pcd  c20.pcd  c24.pcd  c5.pcd  c6.pcd  c7.pcd  c9.pcd
clouds/scanmatch/3d/: log  out.pcd  src.pcd  src0.pcd  src1.pcd  src2.pcd  src3.pcd  src4.pcd  tgt.pcd
clouds/segmentation/: livox_scan.pcd
cropzones/: dee0.crop  dee1.crop  dee2.crop  meta.json
cuda/: CMakeLists.txt
cuda/src/: gpu_transform.h  gputransform.cpp  transform_kernel.cu  transform_test.cpp
cuda_src/: gpu_transform.h  transform_kernel.cu  transform_test.cpp
include/: .txt2pc.h.swp  crop2pcd.h  myinc.h  txt2pc.h  utm.h
include/.cache/clangd/index/: crop2pcd.h.349E246D0DFDFC04.idx  utm.h.B1C9E8AFF3E8A082.idx
include/.clangd/index/: txt2pc.h.8DFA13848D1611E5.idx
qt/: CMakeLists.txt
qt/src/: main.cpp  pcd_view_qt.cpp  pcd_view_qt.h  pcd_view_qt.ui
registration/: CMakeLists.txt
registration/src/: Features.h  color_registration.cpp  duna_registration_test.cpp  feature_registration.cpp  my_icp.hpp  my_registration.cpp  my_transform.hpp  my_transform2.hpp  my_transform3.hpp  my_transform4.hpp  my_transform_normals.hpp  registration.cpp  registration_normals.cpp
registration/src/duna/: compile_commands.json  correspondence_estimator.cpp  feature_point.h  feature_registration.cpp  feature_registration.h  my_transform.hpp  transform_normals.cpp
registration/src/marcus/: correspondence_estimator.cpp  correspondence_estimator.h  icp.cpp  icp.h  my_transform4.hpp  transform_normals.h
registration/src/my/: my_correspondence_estimator.cpp  my_icp.cpp  my_icp.h  my_transform2.hpp  my_transform3.hpp  my_transform_normals.cpp  my_transform_normals.hpp
slam/: CMakeLists.txt
slam/references/: features0.cpp  features1.cpp
slam/src/: registration.cpp  registration2d_features.cpp  registration_normals.cpp
src/: .cropbox.cpp.swp  .main.cpp.swp  .normals.cpp.swp  .txt2pc.cpp.swp  Features.h  PCUtils.cpp  PCUtils.h  convert2xyz.cpp  cropbox.cpp  duna_visualize.cpp  extconverter.cpp  features.cpp  features_app.cpp  filters.cpp  geocrop.cpp  grid.cpp  laser_camera_calibration.cpp  normals.cpp  pcd2txt.cpp  pcl_transform_point_cloud.cpp  pcl_view_example.cpp  plane.cpp  registration.cpp  registration2d.cpp  registration2d_features.cpp  roifilter.cpp  segmentation.cpp  subsample.cpp  visualize.cpp  volume.cpp  walking_normals.cpp
src/.cache/clangd/index/: PCUtils.cpp.9B303FADCCBC0E2F.idx  PCUtils.h.4204D4214F81E14E.idx  extconverter.cpp.3E1E4213B576E0E2.idx  features.cpp.2CA3EB270178D756.idx  filters.cpp.019D20F11F48776A.idx  geocrop.cpp.A0BA9505118EEB08.idx  normals.cpp.35CF1DC2509C81E0.idx  pcl_transform_point_cloud.cpp.462EBC7E2C4A9925.idx  pcl_view_example.cpp.18707CD2E33943B6.idx  plane.cpp.D34D350B88E08491.idx  registration.cpp.3282F789E716B32B.idx  registration2d.cpp.67D20638E83E6724.idx  segmentation.cpp.9CB9E8E859F72322.idx  subsample.cpp.8095B444575F65A9.idx  visualize.cpp.0AD28DC6A47405C5.idx  volume.cpp.2CB99C83D5C57575.idx
src/.clangd/index/: grid.cpp.01DE9B8190426072.idx  normals.cpp.C1E9258AE783DAF5.idx  plane.cpp.D149DB2D1585E826.idx  volume.cpp.F11BD3ACB379C366.idx
test_src/: point2line.cpp
tests/: CMakeLists.txt
utilities/: CMakeLists.txt
utilities/include/: PCUtils.h
utilities/src/: PCUtils.cpp
volume/: CMakeLists.txt
volume/src/: compute_volume.hpp  surface.cpp  volume.cpp  volume_studies.cpp
